[package]
name = "ldjam49"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0" }
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = "0.11.0"
rand = "0.8.4"
