[package]
name = "ldjam49"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# bevy = { version = "0.5.0" }
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = "0.11.0"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11", "png"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "png"]}
bevy_webgl2 = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
