[package]
name = "chevalchemy"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# bevy = { version = "0.5.0" }
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_rapier2d = { version = "0.11.0", features = ["serde-serialize"] }
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
anyhow = "1"
bevy_egui = "0.7"

[profile.dev.package.bevy_rapier2d]
opt-level = 3

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11", "png", "dynamic"]}
# [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# # bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11", "png", "dynamic"]}
# bevy = { version = "0.5.0", features = ["dynamic"] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render", "png"]}
bevy_webgl2 = "0.5"
